<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PhonedroidActivity!</string>
    <string name="app_name">Phone log</string>
    <string name="GroupView">Вид</string>
    <string name="about_text">about bla-bla</string>
    
    
    <string name="strDurSample">00:00</string>
    <string name="strContactName">qjName, last name, middle name</string>
    <string name="strDateTime">01.02.11 19:59</string>
    <string name="strNumber">+7-123-456-77-85</string>
    <string name="strSampleData">sample data string sample data string http://developer.android.com data string \n end string</string>
    <string name="SendPhoneCall">Позвонить</string>
    <string name="SendPhoneSMS">Написать СМС</string>
</resources>
