<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false">
    <LinearLayout android:layout_width="fill_parent" android:focusableInTouchMode="false" android:orientation="vertical" android:clickable="false" android:focusable="false" android:layout_height="wrap_content" android:id="@+id/lytMain">
        <LinearLayout android:layout_width="fill_parent" android:focusableInTouchMode="false" android:layout_height="wrap_content" android:clickable="false" android:focusable="false" android:id="@+id/linearLayout1">
            <LinearLayout android:layout_width="wrap_content" android:focusableInTouchMode="false" android:layout_height="match_parent" android:orientation="vertical" android:clickable="false" android:focusable="false" android:id="@+id/linearLayout4">
                <ImageView android:layout_width="wrap_content" android:layout_height="match_parent" android:focusableInTouchMode="false" android:focusable="false" android:layout_weight="1" android:id="@+id/al_Img" android:src="@drawable/outgoing" android:layout_gravity="center" android:padding="0px" android:clickable="false"></ImageView>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strDurSample" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0" android:focusable="false" android:textStyle="bold" android:layout_gravity="bottom" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/al_Duration" android:singleLine="true"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:focusableInTouchMode="false" android:layout_height="wrap_content" android:weightSum="1" android:orientation="vertical" android:clickable="false" android:focusable="false" android:layout_weight="1" android:id="@+id/linearLayout2">
                <ViewFlipper android:layout_width="match_parent" android:outAnimation="@anim/push_up_out" android:id="@+id/viewFlipper1" android:focusable="false" android:contentDescription="@string/strNumber" android:clickable="false" android:inAnimation="@anim/push_up_in" android:autoStart="false" android:focusableInTouchMode="false" android:layout_height="wrap_content">
                    <TextView android:layout_width="fill_parent" android:text="@string/strContactName" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:textColor="@color/ColorOutgoing" android:focusable="false" android:textStyle="bold" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/al_Text" android:paddingLeft="5sp" android:singleLine="true"></TextView>
                    <TextView android:layout_width="fill_parent" android:text="@string/strContactName" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:focusable="false" android:textStyle="bold" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/ContactNameView" android:singleLine="true"></TextView>
                </ViewFlipper>
                <LinearLayout android:layout_width="match_parent" android:focusableInTouchMode="false" android:layout_height="wrap_content" android:clickable="false" android:focusable="false" android:id="@+id/linearLayout3">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/strNumber" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="1" android:focusable="false" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/al_Number" android:paddingLeft="5sp" android:singleLine="true"></TextView>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strDateTime" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0" android:focusable="false" android:textStyle="bold" android:layout_gravity="top|right" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/al_DateTime" android:singleLine="true"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strSampleData" android:textAppearance="?android:attr/textAppearanceMedium" android:focusable="false" android:clickable="false" android:focusableInTouchMode="false" android:id="@+id/al_Data"></TextView>
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/reply" android:layout_below="@+id/lytMain" android:layout_alignParentRight="true" android:layout_alignParentTop="true" android:layout_alignBottom="@+id/lytMain" android:id="@+id/btnReply"></ImageView>    
</RelativeLayout>
